# misc-linters

./: BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  licence-checker.hjson  requirements.txt
.github/workflows/: licence-checker.yml
licence-checker/: BUILD  README.md  licence-checker.py
rules/: deps.bzl  licence-checker-runner.template.sh  pip.bzl  repos.bzl  rules.bzl
tests/: MODULE.bazel
