# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(name = "lowrisc_misc_linters")

bazel_dep(name = "rules_python", version = "0.32.2")
bazel_dep(
    name = "aspect_rules_lint",
    version = "1.0.0-rc3",
    dev_dependency = True,
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.9")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, lowrisc_misc_linters_pip="pip")
